# remote

./: .gitmodules  CMakeLists.txt  README
remote/: RemoteApplication.cpp  RemoteApplication.hpp  RemoteContext.hpp  WidgetKind.hpp  ZeroconfListener.cpp  ZeroconfListener.hpp  main.cpp  qml.qrc
remote/Models/: CentralItemModel.cpp  CentralItemModel.hpp  ContainerItem.cpp  ContainerItem.hpp  CreateItemFromAddress.cpp  CreateItemFromAddress.hpp  GUIItem.cpp  GUIItem.hpp  Items.hpp  NodeModel.cpp  NodeModel.hpp  WidgetAddressSetup.hpp  WidgetListModel.cpp  WidgetListModel.hpp
remote/qml/: CentralArea.qml  MainPage.qml  NodeTree.qml  WidgetList.qml  main.qml
remote/qml/widgets/: Button.qml  Container.qml  DonutSlider.qml  DynamicHSliderForm.ui.qml  DynamicSwitchForm.ui.qml  DynamicVSliderForm.ui.qml  Graph.qml  HSVSlider.qml  HSlider.qml  Joystick.qml  Keyboard.qml  Label.qml  Leds.qml  LineEdit.qml  Matrix.qml  MultiSlider.qml  RGBSlider.qml  RGBSliderForm.ui.qml  Scope.qml  Switch.qml  VSlider.qml  XYPad.qml
remote/qml/widgets/dynamic/: AddressLabel.qml  DynamicButton.qml  DynamicButtonForm.ui.qml  DynamicHSlider.qml  DynamicHSliderForm.ui.qml  DynamicLineEditForm.ui.qml  DynamicSwitch.qml  DynamicVSlider.qml
remote/qml/widgets/static/: StaticButton.qml  StaticHSlider.qml  StaticLabel.qml  StaticLineEdit.qml  StaticSlider.qml  StaticSwitch.qml  StaticVSlider.qml
